--- a/pyproject.toml
+++ b/pyproject.toml
@@ -13,7 +13,11 @@ dependencies = [
 
 
 [project.optional-dependencies]
-dev = ['pytest']
+dev = [
+    "pytest",
+    "pre-commit",
+    "mypy",
+]
 
 [project.scripts]
 prettypdf = "prettypdf.main:app"
